--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -4,19 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatScreen">
+    tools:context=".ChatScreen"
+    android:backgroundTint="@color/ivory">
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="287dp"
-        android:layout_height="wrap_content"
+        android:layout_width="296dp"
+        android:layout_height="59dp"
+        android:layout_below="@+id/messageLog"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="9dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="-2dp"
         android:layout_marginBottom="5dp"
         android:ems="10"
         android:hint="Type message here"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:padding="5dp" />
 
     <Button
         android:id="@+id/sendButton"
@@ -25,16 +31,23 @@
         android:layout_alignTop="@+id/editText"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginStart="-1dp"
+        android:layout_marginLeft="-1dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_toEndOf="@+id/editText"
+        android:layout_toRightOf="@+id/editText"
+        android:background="@color/navy"
         android:onClick="sendMessage"
-        android:text="Send" />
+        android:text="Send"
+        android:textColor="@color/ivory"
+        tools:padding="5dp" />
 
     <TextView
         android:id="@+id/messageLog"
         android:layout_width="match_parent"
-        android:layout_height="445dp"
+        android:layout_height="437dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -42,9 +55,12 @@
         android:layout_alignParentRight="true"
         android:layout_marginStart="0dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
+        android:background="#ffffff"
         android:gravity="bottom"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         tools:hint="(text) messages go here" />
 </RelativeLayout>
